# support-report-generator

./: .env_example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  ufiber_outages.py  uisp_outages.py  unifi_outages.py
.github/workflows/: codeql.yaml
src/mesh_support_report_generator/: endpoints.py  incident.py  lambda_handler.py  main.py  post_to_slack.py  report.py  set_unifi_passwords.py  ufiber_outages.py  uisp_outages.py  unifi_outages.py
src/mesh_supportbot_list/: endpoints.py  lambda_handler.py  main.py  post_to_slack.py  ufiber_outages.py  uisp_outages.py  unifi_outages.py
test/: test_incident.py  test_report.py  test_ufiber_outages.py  test_uisp_outages.py  test_unifi_outages.py
test/meshdb_data/: device_lookup.json
test/ufiber_data/: device_details.json  device_details_with_ignore_token.json  devices.json
test/uisp_data/: device.json  device_in_maintenance_mode.json  device_with_ignore_token.json  devices.json  outages.json
test/unifi_data/: devices.json  sites.json
